# sdmw

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml  test.yml
src/: add.rs  install.rs  main.rs  new.rs  parse_args.rs  parse_arguments.rs  settings.rs  subcommands.rs  test.rs  uninstall.rs  utils.rs
src/subcommands/: add.rs  install.rs  new.rs  restore.rs  uninstall.rs
