[package]
name = "sdmw"
version = "0.2.0"
edition = "2021"
description = "A Simple Dotfiles Manager."
authors = ["p1486 xzstd099@protonmail.com"]
repository = "https://github.com/p1486/sdmw.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
filey = "1.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
